--- a/index.html
+++ b/index.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>Tic Tace Toe</title>
 </head>
 <body>
-<div class="card1">X</div>
-<div class="card2">O</div>
-<div class="card3">X</div>
-<div class="card4"></div>
-<div class="card5"></div>
-<div class="card6"></div>
-<div class="card7"></div>
-<div class="card8"></div>
-<div class="card9"></div>
-<script src="script.js"></script>
+    <header>
+        Tic Tac Toe
+    </header>
+    <main>
+        <div class="card-container">
+            <div class="card 0">0</div>
+            <div class="card 1">1</div>
+            <div class="card 2">2</div>
+            <div class="card 3">3</div>
+            <div class="card 4">4</div>
+            <div class="card 5">5</div>
+            <div class="card 6">6</div>
+            <div class="card 7">7</div>
+            <div class="card 8">8</div>
+        </div>
+    </main>
+    <footer>
+        footer
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
