Add base colors and structure of style.css file

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 </head>
 <body>
     <header>
-        Tic Tac Toe
+        <h1>Tic Tac Toe</h1>
     </header>
     <main>
         <div class="card-container">
-            <div class="card 0">0</div>
-            <div class="card 1">1</div>
-            <div class="card 2">2</div>
-            <div class="card 3">3</div>
-            <div class="card 4">4</div>
-            <div class="card 5">5</div>
-            <div class="card 6">6</div>
-            <div class="card 7">7</div>
-            <div class="card 8">8</div>
+            <div class="card 0">x</div>
+            <div class="card 1">x</div>
+            <div class="card 2">x</div>
+            <div class="card 3">x</div>
+            <div class="card 4">x</div>
+            <div class="card 5">x</div>
+            <div class="card 6">x</div>
+            <div class="card 7">x</div>
+            <div class="card 8">x</div>
         </div>
     </main>
     <footer>
