--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </main>
     <footer>
-        footer
+        <h2>footer</h2>
     </footer>
     <script src="script.js"></script>
 </body>
