Create modal HTML & styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
     <header>
         <h1>Tic Tac Toe</h1>
     </header>
+    <div class="modal">
+        <div class="modal-content">
+            <h2 class="modal-header">Choose your sign:</h2>
+            <span class="line-break"></span>
+            <div class="forms-container">
+                <form action="" class="player-1">
+                    <input type="text" name="player-1-name" id="player-1-name" value="Player 1">
+                    <h2 class="player-sign">X</h2>
+                    <input type="submit" value="Choose" class="form-btn">
+                </form>
+                <div class="line-break"></div>
+                <form action="" class="player-2">
+                    <input type="text" name="player-2-name" id="player-2-name" value="Player 2">
+                    <h2 class="player-sign">O</h2>
+                    <input type="submit" value="Choose" class="form-btn">
+                </form>
+        </div>
+        <button class="form-btn play-btn">Play!</button>
+        </div>
+    </div>
     <main>
         <div class="card-container">
             <div class="card 0">x</div>
