Add modal desc, Change form input text to be transparent

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="modal">
         <div class="modal-content">
             <h2 class="modal-header">Choose your sign:</h2>
+            <h3 class="modal-header">(You could also change player names)</h2>
             <span class="line-break"></span>
             <div class="forms-container">
                 <form action="" class="player-1">
