--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <form action="" class="players">
                     <div class="player-container">
                         <input type="text" name="player-1-name" id="player-1-name" value="Player 1">
-                        <h2 class="player-sign">X</h2>
+                        <h2 class="player-sign" id="player-1-sign">X</h2>
                     </div>
                     <div class="line-break"></div>
                     <div class="player-container">
                         <input type="text" name="player-2-name" id="player-2-name" value="Player 2">
-                        <h2 class="player-sign">O</h2>
+                        <h2 class="player-sign" id="player-2-sign">O</h2>
                     </div>
                 </form>
         </div>
