--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </div>
     </div>
     <main>
+        <div class="scoreboard-container">
+        </div>
         <div class="card-container">
             <div class="card 0">x</div>
             <div class="card 1">x</div>
