Add eventListeners to all cards

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         <div class="scoreboard-container">
         </div>
         <div class="card-container">
-            <div class="card 0">x</div>
-            <div class="card 1">x</div>
-            <div class="card 2">x</div>
-            <div class="card 3">x</div>
-            <div class="card 4">x</div>
-            <div class="card 5">x</div>
-            <div class="card 6">x</div>
-            <div class="card 7">x</div>
-            <div class="card 8">x</div>
+            <div class="card 0"></div>
+            <div class="card 1"></div>
+            <div class="card 2"></div>
+            <div class="card 3"></div>
+            <div class="card 4"></div>
+            <div class="card 5"></div>
+            <div class="card 6"></div>
+            <div class="card 7"></div>
+            <div class="card 8"></div>
         </div>
     </main>
     <footer>
