--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
         <div class="scoreboard-container">
         </div>
         <div class="card-container">
-            <div class="card 0"></div>
-            <div class="card 1"></div>
-            <div class="card 2"></div>
-            <div class="card 3"></div>
-            <div class="card 4"></div>
-            <div class="card 5"></div>
-            <div class="card 6"></div>
-            <div class="card 7"></div>
-            <div class="card 8"></div>
+            <div class="card 0" data-row="0" data-col="0"></div>
+            <div class="card 1" data-row="0" data-col="1"></div>
+            <div class="card 2" data-row="0" data-col="2"></div>
+            <div class="card 3" data-row="1" data-col="0"></div>
+            <div class="card 4" data-row="1" data-col="1"></div>
+            <div class="card 5" data-row="1" data-col="2"></div>
+            <div class="card 6" data-row="2" data-col="0"></div>
+            <div class="card 7" data-row="2" data-col="1"></div>
+            <div class="card 8" data-row="2" data-col="2"></div>
         </div>
     </main>
     <footer>
