Stop game when identified a player has won & Add Scoreboard H1

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
         </div>
     </div>
     <main>
-        <div class="scoreboard-container">
+        <div class="main-header">
+            <h2>Scoreboard:</h2>
+            <div class="scoreboard-container"> </div>
         </div>
+       
         <div class="card-container">
             <div class="card 0" data-row="0" data-col="0"></div>
             <div class="card 1" data-row="0" data-col="1"></div>
