Improve responsiveness of app

--- a/index.html
+++ b/index.html
@@ -14,12 +14,11 @@
     </header>
     <div class="modal">
         <div class="modal-content">
-            <h2 class="modal-header">Choose your sign:</h2>
-            <h3 class="modal-header">(You could also change player names)</h2>
+            <h2 class="modal-header">Name your Players:</h2>
             <div class="form-container">
                 <form action="" class="players">
                     <div class="player-container">
-                        <input type="text" name="player-1-name" id="player-1-name" value="Player 1">
+                        <input type="text" name="player-1-name" id="player-1-name" value="Player 1" autofocus>
                         <h2 class="player-sign" id="player-1-sign">X</h2>
                     </div>
                     <div class="line-break"></div>
@@ -34,7 +33,6 @@
     </div>
     <main>
         <div class="main-header">
-            <h2>Scoreboard:</h2>
             <div class="scoreboard-container"> </div>
         </div>
        
