--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
     <main>
         <div class="main-header">
+            <h2>Scoreboard:</h2>
             <div class="scoreboard-container"> </div>
         </div>
        
