Add current player's sign while hovering on a card, style footer

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </main>
     <footer>
-        <h2>footer</h2>
+        <h2>Avihay Rabi - <a href="https://github.com/AvihayR">GitHub</a></h2>
     </footer>
     <script src="script.js"></script>
 </body>
