Change header, Add width & height to player-cards @ scoreboard

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Tic Tac Toe</h1>
+        <h1>🍑 Thicc Tac Toe 🍑</h1>
     </header>
     <div class="modal">
         <div class="modal-content">
