--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>🍑 Thicc Tac Toe 🍑</h1>
     </header>
-    <div class="modal">
+    <div class="welcome modal">
         <div class="modal-content">
             <h2 class="modal-header">Name your Players:</h2>
             <div class="form-container">
@@ -31,6 +31,8 @@
         <button class="form-btn play-btn">Play!</button>
         </div>
     </div>
+    <!--<br>-->
+
     <main>
         <div class="main-header">
             <h2 id="scoreboard-header">Scoreboard:</h2>
