Add game rounds feature, can now play the game until a player score a 3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>🍑 Thicc Tac Toe 🍑</h1>
     </header>
     <div class="welcome modal">
-        <div class="modal-content">
+        <div class="modal-content" id="modal-1">
             <h2 class="modal-header">Name your Players:</h2>
             <div class="form-container">
                 <form action="" class="players">
@@ -30,9 +30,11 @@
         </div>
         <button class="form-btn play-btn">Play!</button>
         </div>
-    </div>
-    <!--<br>-->
-
+        <div class="modal-content hidden" id="modal-2">
+            <h2 class="modal-header">Header here</h2>
+            <button class="form-btn round-btn">Next round ➪</button>
+        </div>
+    </div> 
     <main>
         <div class="main-header">
             <h2 id="scoreboard-header">Scoreboard:</h2>
