Add ending modal feature

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
         </div>
         <button class="form-btn play-btn">Play!</button>
         </div>
+        <!-------------->
         <div class="modal-content hidden" id="modal-2">
             <h2 class="modal-header">Header here</h2>
             <button class="form-btn round-btn">Next round ➪</button>
         </div>
+        <!-------------->
+        <div class="modal-content ending-modal hidden" id="modal-3">
+            <h2 class="modal-header">Final result:</h2>
+            <p class="finale-p"></p>
+            <button class="form-btn reset-btn">Reset ⤺ </button>
+        </div>
+        <!-------------->
     </div> 
     <main>
         <div class="main-header">
