--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </main>
     <footer>
-        <h2>Avihay Rabi - <a href="https://github.com/AvihayR">GitHub</a></h2>
+        <h2>Avihay Rabi - <a href="https://github.com/AvihayR/TicTacToe">GitHub</a></h2>
     </footer>
     <script src="script.js"></script>
 </body>
