--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <div class="player-container">
                         <input type="text" name="player-2-name" id="player-2-name" value="Player 2">
                         <h2 class="player-sign" id="player-2-sign">O</h2>
+                        <button class="form-btn" id="bot-btn">BOT MODE:  OFF</button>
                     </div>
                 </form>
         </div>
